[gd_scene load_steps=11 format=3 uid="uid://bmsn0nag6ndl8"]

[ext_resource type="Script" path="res://planets/earth/earth.gd" id="1_48bx1"]
[ext_resource type="PackedScene" uid="uid://sc8xm7aym51d" path="res://player/player.tscn" id="2_qkox3"]
[ext_resource type="PackedScene" uid="uid://bc82m3np056ip" path="res://loots/minerals.tscn" id="3_2c5ol"]
[ext_resource type="Texture2D" uid="uid://dmwqoxayeudod" path="res://pics/mockup/Red_circle.svg.png" id="4_6k3m8"]
[ext_resource type="Texture2D" uid="uid://bmxowqwctb54t" path="res://pics/bg/mercury_background.png" id="4_dey5f"]
[ext_resource type="Script" path="res://planets/earth/starter_pickaxe.gd" id="5_8v7g6"]
[ext_resource type="Texture2D" uid="uid://cn18pn1jyyfqc" path="res://pics/tools/sheetPickaxe.png" id="5_507p3"]
[ext_resource type="PackedScene" uid="uid://bob5f2sxvlmc0" path="res://player/player_interface.tscn" id="5_j4730"]

[sub_resource type="CircleShape2D" id="CircleShape2D_od74y"]
radius = 30.5941

[sub_resource type="CircleShape2D" id="CircleShape2D_frrj7"]
radius = 48.0416

[node name="earth" type="Node2D"]
editor_description = "earth"
script = ExtResource("1_48bx1")
player = ExtResource("2_qkox3")
earth_mineral = ExtResource("3_2c5ol")
metadata/_edit_horizontal_guides_ = [648.0, 18.0]
metadata/_edit_vertical_guides_ = [1152.0]

[node name="bg" type="Sprite2D" parent="."]
self_modulate = Color(0.105882, 1, 0.631373, 1)
position = Vector2(583, 319)
texture = ExtResource("4_dey5f")

[node name="spawn_player" type="Marker2D" parent="."]
position = Vector2(346, 294)

[node name="takeoff" type="Area2D" parent="spawn_player" groups=["takeoff"]]

[node name="takeoff" type="Sprite2D" parent="spawn_player/takeoff"]
scale = Vector2(0.083, 0.083)
texture = ExtResource("4_6k3m8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/takeoff"]
shape = SubResource("CircleShape2D_od74y")

[node name="natural_drops" type="Node2D" parent="."]

[node name="starter_pickaxe" type="Node2D" parent="natural_drops"]
position = Vector2(823, 368)
script = ExtResource("5_8v7g6")

[node name="bronze_pickaxe" type="Sprite2D" parent="natural_drops/starter_pickaxe"]
rotation = -3.14159
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_507p3")
region_enabled = true
region_rect = Rect2(180, 500, 120, 120)

[node name="hover" type="Sprite2D" parent="natural_drops/starter_pickaxe"]
rotation = 3.14159
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_507p3")
region_enabled = true
region_rect = Rect2(10, 490, 140, 140)

[node name="grabBox" type="Area2D" parent="natural_drops/starter_pickaxe" groups=["tool"]]

[node name="coll" type="CollisionShape2D" parent="natural_drops/starter_pickaxe/grabBox"]
shape = SubResource("CircleShape2D_frrj7")

[node name="player_interface" parent="." instance=ExtResource("5_j4730")]

[connection signal="area_entered" from="spawn_player/takeoff" to="." method="_on_takeoff_area_entered"]
[connection signal="area_exited" from="spawn_player/takeoff" to="." method="_on_takeoff_area_exited"]
[connection signal="area_entered" from="natural_drops/starter_pickaxe/grabBox" to="natural_drops/starter_pickaxe" method="_on_grab_box_area_entered"]
[connection signal="area_exited" from="natural_drops/starter_pickaxe/grabBox" to="natural_drops/starter_pickaxe" method="_on_grab_box_area_exited"]
[connection signal="mouse_entered" from="natural_drops/starter_pickaxe/grabBox" to="natural_drops/starter_pickaxe" method="_on_grab_box_mouse_entered"]
[connection signal="mouse_exited" from="natural_drops/starter_pickaxe/grabBox" to="natural_drops/starter_pickaxe" method="_on_grab_box_mouse_exited"]
